Simplify endpoint paths
